[tool.poetry]
name = "analyzer"
version = "0.1.0"
description = ""
authors = ["Ariel Horwitz <ArielHorwitz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
arrow = "1.2.2"
pandas = "1.4.2"
plotly = "5.7.0"
spacy = "3.3.0"
wordcloud = "1.8.1"
pillow = "9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
